[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/0_UIother/scn_efc_WobblyBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://spr_sprites/spr_other/Text/YouAreStillHere1_0005.png" type="Texture" id=2]
[ext_resource path="res://spr_sprites/spr_other/Text/YouAreStillHere1_0001.png" type="Texture" id=3]
[ext_resource path="res://spr_sprites/spr_other/Text/YouAreStillHere1_0004.png" type="Texture" id=4]
[ext_resource path="res://spr_sprites/spr_other/Text/YouAreStillHere1_0003.png" type="Texture" id=5]
[ext_resource path="res://spr_sprites/spr_other/Text/YouAreStillHere1_0002.png" type="Texture" id=6]
[ext_resource path="res://spr_sprites/spr_other/Text/YouAreStillHere1_0006.png" type="Texture" id=7]
[ext_resource path="res://levels/level_0/scr_cutscene_1.gd" type="Script" id=8]
[ext_resource path="res://levels/0_UIother/scn_transitionScreenBlack.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "text_default",
"speed": 6.0
} ]

[node name="cutscene_1" type="Node2D"]
script = ExtResource( 8 )
scene = "res://levels/level_0/scn_level_0.tscn"

[node name="efc_WobblyBackground" parent="." instance=ExtResource( 1 )]
margin_left = 1.12244
margin_top = -1.1225
margin_right = 1601.12
margin_bottom = 1048.88

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.784314, 0.627451, 0.392157, 1 )
position = Vector2( 808, 440 )
frames = SubResource( 1 )
animation = "text_default"
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="TransitionScreenBlack" parent="." instance=ExtResource( 9 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="transitioned" from="TransitionScreenBlack" to="." method="_on_TransitionScreenBlack_transitioned"]
